[gd_scene load_steps=6 format=3 uid="uid://cgq72gnmbbvr6"]

[ext_resource type="Texture2D" uid="uid://ceov27l8civ2q" path="res://icon.svg" id="1_tcht0"]
[ext_resource type="Script" path="res://Towers/tower.gd" id="2_w310v"]
[ext_resource type="Texture2D" uid="uid://hluvuxi4e1ld" path="res://Textures/Towers/towerRad.png" id="3_wlhkv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xslbx"]
radius = 58.8889

[sub_resource type="CircleShape2D" id="CircleShape2D_p436m"]
radius = 367.534

[node name="archOS" type="Sprite2D" groups=["archOS"]]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
self_modulate = Color(0.380392, 0.376471, 0.32549, 1)
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_tcht0")
script = ExtResource("2_w310v")
rotation_delta = 3.142
proj_speed = 1600
energy_max = 300
targeting = "Strong"
cost = 70
upgrade_opts = Array[String](["damage", "energy_consumpt", "rotation_delta", "pierce"])

[node name="HoverArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoverArea"]
shape = SubResource("CircleShape2D_xslbx")

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_p436m")
debug_color = Color(0, 0.6, 0.701961, 0.164706)

[node name="TowerRad" type="Sprite2D" parent="Range"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.286275)
position = Vector2(3.57628e-07, 2.5034e-06)
scale = Vector2(1.525, 1.525)
texture = ExtResource("3_wlhkv")

[node name="FireCooldown" type="Timer" parent="."]

[node name="ConsumeEnergy" type="Timer" parent="."]

[connection signal="area_entered" from="HoverArea" to="." method="_on_hover_area_area_entered"]
[connection signal="mouse_entered" from="HoverArea" to="." method="_on_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="HoverArea" to="." method="_on_hover_area_mouse_exited"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="FireCooldown" to="." method="_on_fire_cooldown_timeout"]
[connection signal="timeout" from="ConsumeEnergy" to="." method="_on_consume_energy_timeout"]
